改进搜索结果高亮; 隐藏 Sidebar